--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.11.0",
     "react-type-animation": "^3.2.0",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
